<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/topSetPlf"
        layout="@layout/layout_top_set_plf" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topSetPlf">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plf_loan_amount" />

            <EditText
                android:id="@+id/etLoanAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:digits="@string/plf_number_1"
                android:inputType="number"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ff0000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plf_interest_rate" />

            <EditText
                android:id="@+id/etInterestRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:digits="@string/plf_number_2"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plf_loan_term" />

            <EditText
                android:id="@+id/etLoanTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:digits="@string/plf_number_1"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>