<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="84dp"
    android:layout_height="wrap_content"
    android:background="@drawable/plf_stroke_12dp_white_1dp_0699a0"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/plf_selector_12dp_0ace86_topr"
        android:gravity="center"
        android:paddingVertical="18dp"
        android:text="@string/app_1"
        android:textColor="@color/color_plf_selector_white_050c03"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvNumber4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/plf_selector_12dp_0ace86_center"
        android:gravity="center"
        android:paddingVertical="18dp"
        android:text="@string/app_4"
        android:textColor="@color/color_plf_selector_white_050c03"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvNumber12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/plf_selector_12dp_0ace86_bottomr"
        android:gravity="center"
        android:paddingVertical="18dp"
        android:text="@string/app_12"
        android:textColor="@color/color_plf_selector_white_050c03"
        android:textSize="12sp" />
</LinearLayout>