<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/plf_compare"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llPersonalLoan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/plf_shape_12dp_white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/llBusinessLoan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTools">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/plf_til_home_personal_loan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/plf_personal_loan"
            android:textColor="@color/plf_050C03"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/plf_compare_des_personal"
            android:textColor="@color/plf_050C03_30"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/plf_shape_16dp_0ace86"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/plf_go"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBusinessLoan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/plf_shape_12dp_white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llPersonalLoan"
        app:layout_constraintTop_toBottomOf="@+id/tvTools">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/plf_til_home_business_loan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/plf_business_loan"
            android:textColor="@color/plf_050C03"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/plf_compare_des_business"
            android:textColor="@color/plf_050C03_30"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/plf_shape_16dp_0ace86"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/plf_go"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMortgages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/plf_shape_12dp_white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/llAutoLoan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPersonalLoan">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/plf_til_home_mortgages" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/plf_mortgages"
            android:textColor="@color/plf_050C03"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/plf_compare_des_mortgages"
            android:textColor="@color/plf_050C03_30"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/plf_shape_16dp_0ace86"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/plf_go"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAutoLoan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/plf_shape_12dp_white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llMortgages"
        app:layout_constraintTop_toBottomOf="@+id/llPersonalLoan">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/plf_til_home_auto_loan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/plf_auto_loan"
            android:textColor="@color/plf_050C03"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/plf_compare_des_auto_loan"
            android:textColor="@color/plf_050C03_30"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/plf_shape_16dp_0ace86"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/plf_go"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>