<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivHomeMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/plf_til_home_money_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTil1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/plf_shape_16dp_white"
        app:layout_constraintTop_toBottomOf="@+id/ivHomeMoney">

        <TextView
            android:id="@+id/tvPersonalLoan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/plf_til_home_personal_loan"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="8dp"
            android:text="@string/plf_personal_loan"
            android:textColor="@color/plf_050C03"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvBusinessLoan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBusinessLoan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/plf_til_home_business_loan"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="8dp"
            android:text="@string/plf_business_loan"
            android:textColor="@color/plf_050C03"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvPersonalLoan"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMortgages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/plf_til_home_mortgages"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="20dp"
            android:text="@string/plf_mortgages"
            android:textColor="@color/plf_050C03"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvAutoLoan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPersonalLoan" />

        <TextView
            android:id="@+id/tvAutoLoan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/plf_til_home_auto_loan"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="20dp"
            android:text="@string/plf_auto_loan"
            android:textColor="@color/plf_050C03"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvMortgages"
            app:layout_constraintTop_toBottomOf="@+id/tvPersonalLoan" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvInvestment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/plf_investment"
        android:textColor="@color/plf_050C03"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTil1" />

    <LinearLayout
        android:id="@+id/llFixedDeposit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/plf_pressed_12dp_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/llRecurringDeposit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInvestment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/plf_til_home_fixed_deposit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/plf_fixed_deposit"
            android:textColor="@color/plf_050C03"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRecurringDeposit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/plf_pressed_12dp_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llFixedDeposit"
        app:layout_constraintTop_toBottomOf="@+id/tvInvestment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/plf_til_home_recurring_deposit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/plf_recurring_deposit"
            android:textColor="@color/plf_050C03"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>